[chore]: TipService 리팩토링